Add quantum 3D visualization, architecture image, and update paper figure reference

--- a/novel_paper.tex
+++ b/novel_paper.tex
@@ -120,7 +120,7 @@ where $U_{\text{ent}} = \text{CNOT}_{0,1}$ creates entanglement between the two 
 
 \begin{figure*}[t]
 \centering
-\includegraphics[width=0.9\textwidth]{architecture.pdf}
+\includegraphics[width=0.9\textwidth]{architecture.jpg}
 \caption{Quantum-classical hybrid architecture showing the three-stage pipeline: classical feature extraction (Conv2D layers), quantum processing (2-qubit circuit), and classical classification (fully connected layers). The quantum circuit employs angle embedding with RY rotations and CNOT entanglement.}
 \label{fig:architecture}
 \end{figure*}
